logs/rovio/build.make.007.log.stderr
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp: In function ‘int main(int, char**)’:
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:302:12: error: ‘imu_msg’ was not declared in this scope
            imu_msg->linear_acceleration.x = acc[0];
            ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:318:34: error: no matching function for call to ‘rovio::RovioNode<rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> > >::imgCallback0(cv::Mat&)’
   rovioNode.imgCallback0(filtered);
                                  ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:318:34: note: candidate is:
In file included from /home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:39:0:
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:457:8: note: void rovio::RovioNode<FILTER>::imgCallback0(const ImageConstPtr&) [with FILTER = rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> >; sensor_msgs::ImageConstPtr = boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >]
   void imgCallback0(const sensor_msgs::ImageConstPtr & img){
        ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:457:8: note:   no known conversion for argument 1 from ‘cv::Mat’ to ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:319:9: error: expected ‘}’ before ‘else’
         else{
         ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:320:35: error: no matching function for call to ‘rovio::RovioNode<rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> > >::imgCallback1(cv::Mat&)’
    rovioNode.imgCallback1(filtered);
                                   ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:320:35: note: candidate is:
In file included from /home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:39:0:
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:467:8: note: void rovio::RovioNode<FILTER>::imgCallback1(const ImageConstPtr&) [with FILTER = rovio::RovioFilter<rovio::FilterState<25u, 4, 6, 1, 0> >; sensor_msgs::ImageConstPtr = boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >]
   void imgCallback1(const sensor_msgs::ImageConstPtr & img) {
        ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:467:8: note:   no known conversion for argument 1 from ‘cv::Mat’ to ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’
make[2]: *** [CMakeFiles/rovio_rosbag_loader.dir/src/rovio_rosbag_loader.cpp.o] Error 1
make[1]: *** [CMakeFiles/rovio_rosbag_loader.dir/all] Error 2
make: *** [all] Error 2
